new collection directors added
